<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height = "match_parent"
    tools:context = ".view.MainActivity"
    android:background="#F5F5DC">

    <TextView
        android:id="@+id/ip"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="70dp"
        android:text="@string/ip"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/ipString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="@android:dimen/notification_large_icon_height"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:layout_toEndOf="@id/ip"
        android:layout_toRightOf="@id/ip"
        android:ems="10"
        android:hint="@string/IPHint"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ip"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/port"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ipString"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="98dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="103dp"
        android:layout_marginRight="103dp"
        android:layout_marginBottom="200dp"
        android:layout_toEndOf="@+id/port"
        android:layout_toRightOf="@id/port"
        android:hint="@string/portHint"
        android:inputType="textCapSentences|textMultiLine" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="450dp"
        android:background="#6495ed"
        android:onClick="Connect"
        android:text="@string/connect" />


</RelativeLayout>